--- a/lab3/index.html
+++ b/lab3/index.html
@@ -15,15 +15,13 @@
         <div class="container d-flex">
             <nav class="main-menu">
                 <ul>
-                    <li><a href="">Главная</a></li>
-                    <li><a href="">Каталог</a></li>
-                    <li><a href="">Акции</a></li>
-                    <li><a href="">Магазины</a></li>
-                    <li><a href="">Контакты</a></li>
+                    <li><a href="index.html">Главная</a></li>
+                    <li><a href="act.html">Акции</a></li>
+                    <li><a href="contacts.html">Контакты</a></li>
                 </ul>
             </nav>
             <div class="profile">
-                <a href="">Вход</a>
+                <a href="auth.html">Вход</a>
             </div>
         </div>
     </header>
